--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package":"com.sustainsavvy.communiTree",
+      "package":"com.communitree",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
