--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.0.2",
     "communitree": "file:",
     "expo": "~51.0.28",
