--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.4.1",
     "communitree": "file:",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
