--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dgreasi/react-native-time-slot-picker": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "communitree": "file:",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -36,8 +38,8 @@
     "react-native-appwrite": "^0.5.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
