--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~51.0.36",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "^0.27.6",
