--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "^7.0.0",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moment": "^1.1.3",
     "react-native": "0.74.5",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-gesture-handler": "~2.16.1",
