--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "communitree": "file:",
     "expo": "~51.0.36",
+    "expo-blur": "^13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-image-picker": "^15.0.7",
